stopgap

--- a/src/components/theme/Header/header.scss
+++ b/src/components/theme/Header/header.scss
@@ -19,6 +19,7 @@
     @include MQ(S) {
       display: flex;
       justify-content: flex-end;
+      margin-right: 1rem;
       align-items: center;
       visibility: visible;
     }
@@ -29,6 +30,7 @@
     @include MQ(S) {
       width: 50%;
       display: flex;
+      margin-left: 1rem;
       justify-content: flex-start;
       align-items: center;
       visibility: visible;
